--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -364,8 +364,7 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
-  background: url("../../assets/images/thumb.svg");
-  border-radius: 48%;
+  background: url("../../assets/images/thumb_.png");
   background-repeat: no-repeat;
   cursor: pointer;
   z-index: 10;
@@ -393,12 +392,11 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
-  background: url("../../assets/images/thumb.svg");
-  border-radius: 48%;
+  background: url("../../assets/images/thumb_.png");
   background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
-  z-index: 9999;
+  z-index: 10;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .investing_slider input[type=range]::-moz-range-track {
   height: 8px;
@@ -497,9 +495,8 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
-  border-radius: 40%;
-  background: url("../../assets/images/thumb.svg");
-  background-repeat: no-rep48t;
+  background: url("../../assets/images/thumb_.png");
+  background-repeat: no-repeat;
   cursor: pointer;
   z-index: 10;
 }
@@ -526,9 +523,8 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
-  border-radius: 40%;
-  background: url("../../assets/images/thumb.svg");
-  background-repeat: no-rep48t;
+  background: url("../../assets/images/thumb_.png");
+  background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
   z-index: 9999ss;
@@ -630,9 +626,8 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
-  border-radius: 40%;
-  background: url("../../assets/images/thumb.svg");
-  background-repeat: no-rep48t;
+  background: url("../../assets/images/thumb_.png");
+  background-repeat: no-repeat;
   cursor: pointer;
   z-index: 10;
 }
@@ -659,9 +654,8 @@ body {
   height: 22px;
   border: 0;
   margin-top: -7px;
-  border-radius: 40%;
-  background: url("../../assets/images/thumb.svg");
-  background-repeat: no-rep48t;
+  background: url("../../assets/images/thumb_.png");
+  background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
   z-index: 9999ss;
@@ -762,7 +756,7 @@ body {
     padding-right: 50px;
   }
 }
-@media only screen and (max-width: 560px) and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (max-width: 560px) {
   .calculate_section {
     padding-left: 20px;
     padding-right: 20px;
@@ -773,40 +767,6 @@ body {
   }
   .calculate_section .parent {
     display: block;
-  }
-  .calculate_section .parent .card_parent .investing_amout_slider .option_mobile {
-    display: block !important;
-  }
-  .calculate_section .parent .card_parent .investing_amout_slider .option_mobile datalist {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    writing-mode: vertical-lr;
-    width: 100%;
-  }
-  .calculate_section .parent .card_parent .investing_amout_slider .option_mobile option {
-    rotate: 270deg;
-    font-weight: 600;
-    font-size: 11px;
-    color: #0d1822;
-    font-family: "Montserrat";
-  }
-  .calculate_section .parent .card_parent .investing_amout_slider .option_default {
-    display: none !important;
-  }
-  .calculate_section .parent .card_parent .investing_amout_slider .option_default datalist {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    writing-mode: vertical-lr;
-    width: 100%;
-  }
-  .calculate_section .parent .card_parent .investing_amout_slider .option_default option {
-    rotate: 270deg;
-    font-weight: 600;
-    font-size: 11px;
-    color: #0d1822;
-    font-family: "Montserrat";
   }
   .calculate_section .parent .card_parent .investing_amout_slider .investing_slider {
     position: relative;
@@ -837,12 +797,10 @@ body {
     height: 22px;
     border: 0;
     margin-top: -7px;
-    background: url("../../assets/images/thumb.svg");
-    border-radius: 48%;
+    background: url("../../assets/images/thumb_.png");
     background-repeat: no-repeat;
     cursor: pointer;
     z-index: 10;
-    box-shadow: none;
   }
   .calculate_section .parent .card_parent .investing_amout_slider .investing_slider .investing_slider_range::-webkit-slider-runnable-track {
     height: 8px;
@@ -867,13 +825,12 @@ body {
     height: 22px;
     border: 0;
     margin-top: -7px;
-    background: url("../../assets/images/thumb.svg");
-    border-radius: 48%;
+    background: url("../../assets/images/thumb_.png");
+    box-shadow: none;
     background-repeat: no-repeat;
     cursor: pointer;
     position: relative;
-    box-shadow: none;
-    z-index: 9999;
+    z-index: 10;
   }
   .calculate_section .parent .card_parent .investing_amout_slider .investing_slider input[type=range]::-moz-range-track {
     height: 8px;
@@ -881,73 +838,107 @@ body {
     width: 30px;
     z-index: 10;
   }
-  .calculate_section .parent .card_parent .performance_slider .option_mobile {
-    display: block !important;
+  .calculate_section .parent .card_parent .performance_slider .investing_slider {
+    position: relative;
   }
-  .calculate_section .parent .card_parent .performance_slider .option_mobile datalist {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    writing-mode: vertical-lr;
+  .calculate_section .parent .card_parent .performance_slider .investing_slider .investing_slider_range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 22px;
+    border: 0;
+    margin-top: -7px;
+    background: url("../../assets/images/thumb_.png");
+    background-repeat: no-repeat;
+    cursor: pointer;
+    z-index: 10;
+  }
+  .calculate_section .parent .card_parent .performance_slider .investing_slider .investing_slider_range::-webkit-slider-runnable-track {
+    height: 8px;
+    border-radius: 10px;
+    width: 30px;
+    z-index: 10;
+  }
+  .calculate_section .parent .card_parent .performance_slider .investing_slider input[type=range] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
     width: 100%;
+    height: 10px;
+    border-radius: 8px;
+    background: #f0f3f5;
+    position: relative;
   }
-  .calculate_section .parent .card_parent .performance_slider .option_mobile option {
-    rotate: 270deg;
-    font-weight: 600;
-    font-size: 11px;
-    color: #0d1822;
-    font-family: "Montserrat";
+  .calculate_section .parent .card_parent .performance_slider .investing_slider input[type=range]::-moz-range-thumb {
+    -moz-appearance: none;
+         appearance: none;
+    width: 20px;
+    height: 22px;
+    border: 0;
+    margin-top: -7px;
+    background: url("../../assets/images/thumb_.png");
+    box-shadow: none;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
   }
-  .calculate_section .parent .card_parent .performance_slider .option_default {
-    display: none !important;
+  .calculate_section .parent .card_parent .performance_slider .investing_slider input[type=range]::-moz-range-track {
+    height: 8px;
+    border-radius: 10px;
+    width: 30px;
+    z-index: 10;
   }
-  .calculate_section .parent .card_parent .performance_slider .option_default datalist {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    writing-mode: vertical-lr;
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider {
+    position: relative;
+  }
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider .investing_slider_range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 22px;
+    border: 0;
+    margin-top: -7px;
+    background: url("../../assets/images/thumb_.png");
+    background-repeat: no-repeat;
+    cursor: pointer;
+    z-index: 10;
+  }
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider .investing_slider_range::-webkit-slider-runnable-track {
+    height: 8px;
+    border-radius: 10px;
+    width: 30px;
+    z-index: 10;
+  }
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider input[type=range] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
     width: 100%;
+    height: 10px;
+    border-radius: 8px;
+    background: #f0f3f5;
+    position: relative;
   }
-  .calculate_section .parent .card_parent .performance_slider .option_default option {
-    rotate: 270deg;
-    font-weight: 600;
-    font-size: 11px;
-    color: #0d1822;
-    font-family: "Montserrat";
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider input[type=range]::-moz-range-thumb {
+    -moz-appearance: none;
+         appearance: none;
+    width: 20px;
+    height: 22px;
+    border: 0;
+    margin-top: -7px;
+    background: url("../../assets/images/thumb_.png");
+    box-shadow: none;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
   }
-  .calculate_section .parent .card_parent .investing_year_slider .option_mobile {
-    display: block !important;
-  }
-  .calculate_section .parent .card_parent .investing_year_slider .option_mobile datalist {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    writing-mode: vertical-lr;
-    width: 100%;
-  }
-  .calculate_section .parent .card_parent .investing_year_slider .option_mobile option {
-    rotate: 270deg;
-    font-weight: 600;
-    font-size: 11px;
-    color: #0d1822;
-    font-family: "Montserrat";
-  }
-  .calculate_section .parent .card_parent .investing_year_slider .option_default {
-    display: none !important;
-  }
-  .calculate_section .parent .card_parent .investing_year_slider .option_default datalist {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    writing-mode: vertical-lr;
-    width: 100%;
-  }
-  .calculate_section .parent .card_parent .investing_year_slider .option_default option {
-    rotate: 270deg;
-    font-weight: 600;
-    font-size: 11px;
-    color: #0d1822;
-    font-family: "Montserrat";
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider input[type=range]::-moz-range-track {
+    height: 8px;
+    border-radius: 10px;
+    width: 30px;
+    z-index: 10;
   }
   .calculate_section .parent .card_parent .investing_amount_box .investing_percentage {
     padding: 10px 0px !important;
@@ -1074,7 +1065,7 @@ body {
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
-  color: #000000;
+  color: #1d1c1d;
   margin: 0px;
   font-family: "Montserrat_bold";
 }
@@ -1083,7 +1074,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: rgba(0, 0, 0, 0.5019607843);
+  color: #8c8c8c;
   margin: 0px;
   font-family: "Montserrat";
 }
@@ -1095,16 +1086,16 @@ body {
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
-  color: #000000;
-  margin: 0px;
+  color: #1d1c1d;
   font-family: "Montserrat_bold";
+  margin: 0px;
 }
 .how_its_work_section .timeline_root .conference-timeline-content .timeline-article .content-right .timeline_subtitle {
   padding-top: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: rgba(0, 0, 0, 0.5019607843);
+  color: #8c8c8c;
   margin: 0px;
   font-family: "Montserrat";
 }
