--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -381,8 +381,8 @@ body {
               height: 22px;
               border: 0;
               margin-top: -7px;
-              background: url("../../assets/images/thumb.svg");
-              border-radius: 48%;
+              background: url("../../assets/images/thumb_.png");
+
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
@@ -408,12 +408,12 @@ body {
               height: 22px;
               border: 0;
               margin-top: -7px;
-              background: url("../../assets/images/thumb.svg");
-              border-radius: 48%;
+              background: url("../../assets/images/thumb_.png");
+
               background-repeat: no-repeat;
               cursor: pointer;
               position: relative;
-              z-index: 9999;
+              z-index: 10;
             }
             input[type="range"]::-moz-range-track {
               height: 8px;
@@ -520,9 +520,8 @@ body {
             height: 22px;
             border: 0;
             margin-top: -7px;
-            border-radius: 40%;
-            background: url("../../assets/images/thumb.svg");
-            background-repeat: no-rep48t;
+            background: url("../../assets/images/thumb_.png");
+            background-repeat: no-repeat;
             cursor: pointer;
             z-index: 10;
           }
@@ -547,9 +546,8 @@ body {
             height: 22px;
             border: 0;
             margin-top: -7px;
-            border-radius: 40%;
-            background: url("../../assets/images/thumb.svg");
-            background-repeat: no-rep48t;
+            background: url("../../assets/images/thumb_.png");
+            background-repeat: no-repeat;
             cursor: pointer;
             position: relative;
             z-index: 9999ss;
@@ -661,9 +659,8 @@ body {
           height: 22px;
           border: 0;
           margin-top: -7px;
-          border-radius: 40%;
-          background: url("../../assets/images/thumb.svg");
-          background-repeat: no-rep48t;
+          background: url("../../assets/images/thumb_.png");
+          background-repeat: no-repeat;
           cursor: pointer;
           z-index: 10;
         }
@@ -688,9 +685,8 @@ body {
           height: 22px;
           border: 0;
           margin-top: -7px;
-          border-radius: 40%;
-          background: url("../../assets/images/thumb.svg");
-          background-repeat: no-rep48t;
+          background: url("../../assets/images/thumb_.png");
+          background-repeat: no-repeat;
           cursor: pointer;
           position: relative;
           z-index: 9999ss;
@@ -817,7 +813,7 @@ body {
     }
   }
 }
-@media only screen and (max-width: 560px)and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (max-width: 560px) {
   .calculate_section {
     padding-left: 20px;
     padding-right: 20px;
@@ -831,44 +827,6 @@ body {
       display: block;
       .card_parent {
         .investing_amout_slider {
-          .option_mobile {
-            display: block !important;
-
-            datalist {
-              display: flex;
-              flex-direction: column;
-              justify-content: space-between;
-              writing-mode: vertical-lr;
-              width: 100%;
-            }
-
-            option {
-              rotate: 270deg;
-              font-weight: 600;
-              font-size: 11px;
-              color: #0d1822;
-              font-family: "Montserrat";
-            }
-          }
-
-          .option_default {
-            display: none !important;
-            datalist {
-              display: flex;
-              flex-direction: column;
-              justify-content: space-between;
-              writing-mode: vertical-lr;
-              width: 100%;
-            }
-
-            option {
-              rotate: 270deg;
-              font-weight: 600;
-              font-size: 11px;
-              color: #0d1822;
-              font-family: "Montserrat";
-            }
-          }
           .investing_slider {
             position: relative;
             .value_slider {
@@ -897,12 +855,11 @@ body {
               height: 22px;
               border: 0;
               margin-top: -7px;
-              background: url("../../assets/images/thumb.svg");
-              border-radius: 48%;
+              background: url("../../assets/images/thumb_.png");
+
               background-repeat: no-repeat;
               cursor: pointer;
               z-index: 10;
-              box-shadow: none;
             }
             .investing_slider_range::-webkit-slider-runnable-track {
               height: 8px;
@@ -925,13 +882,12 @@ body {
               height: 22px;
               border: 0;
               margin-top: -7px;
-              background: url("../../assets/images/thumb.svg");
-              border-radius: 48%;
+              background: url("../../assets/images/thumb_.png");
+              box-shadow: none;
               background-repeat: no-repeat;
               cursor: pointer;
               position: relative;
-              box-shadow: none;
-              z-index: 9999;
+              z-index: 10;
             }
             input[type="range"]::-moz-range-track {
               height: 8px;
@@ -942,82 +898,108 @@ body {
           }
         }
         .performance_slider {
-          .option_mobile {
-            display: block !important;
+          .investing_slider {
+            position: relative;
 
-            datalist {
-              display: flex;
-              flex-direction: column;
-              justify-content: space-between;
-              writing-mode: vertical-lr;
+            .investing_slider_range::-webkit-slider-thumb {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 20px;
+              height: 22px;
+              border: 0;
+              margin-top: -7px;
+              background: url("../../assets/images/thumb_.png");
+
+              background-repeat: no-repeat;
+              cursor: pointer;
+              z-index: 10;
+            }
+            .investing_slider_range::-webkit-slider-runnable-track {
+              height: 8px;
+              border-radius: 10px;
+              width: 30px;
+              z-index: 10;
+            }
+            input[type="range"] {
+              -webkit-appearance: none;
+              appearance: none;
               width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
             }
-
-            option {
-              rotate: 270deg;
-              font-weight: 600;
-              font-size: 11px;
-              color: #0d1822;
-              font-family: "Montserrat";
+            input[type="range"]::-moz-range-thumb {
+              appearance: none;
+              width: 20px;
+              height: 22px;
+              border: 0;
+              margin-top: -7px;
+              background: url("../../assets/images/thumb_.png");
+              box-shadow: none;
+              background-repeat: no-repeat;
+              cursor: pointer;
+              position: relative;
+              z-index: 10;
             }
-          }
-
-          .option_default {
-            display: none !important;
-            datalist {
-              display: flex;
-              flex-direction: column;
-              justify-content: space-between;
-              writing-mode: vertical-lr;
-              width: 100%;
-            }
-
-            option {
-              rotate: 270deg;
-              font-weight: 600;
-              font-size: 11px;
-              color: #0d1822;
-              font-family: "Montserrat";
+            input[type="range"]::-moz-range-track {
+              height: 8px;
+              border-radius: 10px;
+              width: 30px;
+              z-index: 10;
             }
           }
         }
         .investing_year_slider {
-          .option_mobile {
-            display: block !important;
+          .investing_slider {
+            position: relative;
 
-            datalist {
-              display: flex;
-              flex-direction: column;
-              justify-content: space-between;
-              writing-mode: vertical-lr;
+            .investing_slider_range::-webkit-slider-thumb {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 20px;
+              height: 22px;
+              border: 0;
+              margin-top: -7px;
+              background: url("../../assets/images/thumb_.png");
+
+              background-repeat: no-repeat;
+              cursor: pointer;
+              z-index: 10;
+            }
+            .investing_slider_range::-webkit-slider-runnable-track {
+              height: 8px;
+              border-radius: 10px;
+              width: 30px;
+              z-index: 10;
+            }
+            input[type="range"] {
+              -webkit-appearance: none;
+              appearance: none;
               width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
             }
-
-            option {
-              rotate: 270deg;
-              font-weight: 600;
-              font-size: 11px;
-              color: #0d1822;
-              font-family: "Montserrat";
+            input[type="range"]::-moz-range-thumb {
+              appearance: none;
+              width: 20px;
+              height: 22px;
+              border: 0;
+              margin-top: -7px;
+              background: url("../../assets/images/thumb_.png");
+              box-shadow: none;
+              background-repeat: no-repeat;
+              cursor: pointer;
+              position: relative;
+              z-index: 10;
             }
-          }
-
-          .option_default {
-            display: none !important;
-            datalist {
-              display: flex;
-              flex-direction: column;
-              justify-content: space-between;
-              writing-mode: vertical-lr;
-              width: 100%;
-            }
-
-            option {
-              rotate: 270deg;
-              font-weight: 600;
-              font-size: 11px;
-              color: #0d1822;
-              font-family: "Montserrat";
+            input[type="range"]::-moz-range-track {
+              height: 8px;
+              border-radius: 10px;
+              width: 30px;
+              z-index: 10;
             }
           }
         }
@@ -1157,7 +1139,7 @@ body {
             font-weight: 600;
             font-size: 24px;
             line-height: 32px;
-            color: #000000;
+            color: #1d1c1d;
             margin: 0px;
             font-family: "Montserrat_bold";
           }
@@ -1166,7 +1148,7 @@ body {
             font-weight: 500;
             font-size: 16px;
             line-height: 24px;
-            color: #00000080;
+            color: #8c8c8c;
             margin: 0px;
             font-family: "Montserrat";
           }
@@ -1179,16 +1161,16 @@ body {
             font-weight: 600;
             font-size: 24px;
             line-height: 32px;
-            color: #000000;
-            margin: 0px;
+            color: #1d1c1d;
             font-family: "Montserrat_bold";
+            margin: 0px;
           }
           .timeline_subtitle {
             padding-top: 10px;
             font-weight: 500;
             font-size: 16px;
             line-height: 24px;
-            color: #00000080;
+            color: #8c8c8c;
             margin: 0px;
             font-family: "Montserrat";
           }
