--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -137,12 +137,24 @@ body {
     padding-right: 15px;
   }
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) and (-webkit-min-device-pixel-ratio: 2) {
   .first_section_new {
     margin-top: 10px;
   }
+  .first_section_new .banner_text_1 {
+    margin-bottom: 24px;
+    font-size: 30px;
+    line-height: 36px;
+    color: #ffffff;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-shadow: 0px 0.5px 6px rgba(0, 0, 0, 0.3);
+  }
   .first_section_new .banner_text_2 {
     letter-spacing: 0;
+    font-size: 16px;
   }
 }
 
@@ -527,7 +539,7 @@ body {
   background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
-  z-index: 9999ss;
+  z-index: 10;
 }
 .calculate_section .parent .card_parent .performance_slider .investing_slider input[type=range]::-moz-range-track {
   height: 8px;
@@ -763,11 +775,26 @@ body {
     padding-bottom: 10px;
   }
   .calculate_section .calculate_1 p {
-    font-weight: 500;
+    margin-bottom: 24px;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
     color: #2d2c2c;
+  }
+  .calculate_section .calculate_2 p {
+    font-size: 16px;
   }
   .calculate_section .parent {
     display: block;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .option_mobile {
+    display: block !important;
+  }
+  .calculate_section .parent .card_parent .investing_amout_slider .option_default {
+    display: none !important;
   }
   .calculate_section .parent .card_parent .investing_amout_slider .investing_slider {
     position: relative;
@@ -840,7 +867,32 @@ body {
     width: 30px;
     z-index: 10;
   }
+  .calculate_section .parent .card_parent .performance_slider .option_mobile {
+    display: block !important;
+  }
+  .calculate_section .parent .card_parent .performance_slider .option_default {
+    display: none !important;
+  }
   .calculate_section .parent .card_parent .performance_slider .investing_slider {
+    position: relative;
+  }
+  .calculate_section .parent .card_parent .performance_slider .investing_slider .value_slider {
+    top: 4px;
+    height: 10px;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    position: absolute;
+    background: #0088ff;
+    z-index: 1;
+  }
+  .calculate_section .parent .card_parent .performance_slider .investing_slider .investing_slider_range {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 8px;
+    background: #f0f3f5;
     position: relative;
   }
   .calculate_section .parent .card_parent .performance_slider .investing_slider .investing_slider_range::-webkit-slider-thumb {
@@ -892,7 +944,32 @@ body {
     width: 30px;
     z-index: 10;
   }
+  .calculate_section .parent .card_parent .investing_year_slider .option_mobile {
+    display: block !important;
+  }
+  .calculate_section .parent .card_parent .investing_year_slider .option_default {
+    display: none !important;
+  }
   .calculate_section .parent .card_parent .investing_year_slider .investing_slider {
+    position: relative;
+  }
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider .value_slider {
+    top: 4px;
+    height: 10px;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    position: absolute;
+    background: #0088ff;
+    z-index: 1;
+  }
+  .calculate_section .parent .card_parent .investing_year_slider .investing_slider .investing_slider_range {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 8px;
+    background: #f0f3f5;
     position: relative;
   }
   .calculate_section .parent .card_parent .investing_year_slider .investing_slider .investing_slider_range::-webkit-slider-thumb {
@@ -950,7 +1027,6 @@ body {
   .calculate_section .parent .card_parent .investing_amount_box .returns_percent {
     padding-top: 6px;
     text-align: center;
-    padding-top: 6px;
     display: flex;
     justify-content: center !important;
     align-items: center;
@@ -1304,8 +1380,8 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     font-family: "Montserrat";
-    padding-top: 16px;
-    font-size: 18px;
+    padding-top: 12px;
+    font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     text-align: center;
@@ -1326,7 +1402,7 @@ body {
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .center_line_img {
     right: 0px;
-    left: 44px;
+    left: 35px;
     position: absolute;
     top: 40px;
     width: 100;
@@ -1342,7 +1418,7 @@ body {
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .meta-date {
     margin-left: 0;
-    left: 20px;
+    left: 10px;
     top: 12%;
     height: 50px;
     width: 50px;
@@ -1353,7 +1429,7 @@ body {
     float: none;
     margin-left: 90px;
     min-height: 53px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right-container {
     max-width: 100%;
@@ -1361,13 +1437,18 @@ body {
     float: none;
     margin-left: 90px;
     min-height: 53px;
+    margin-bottom: 0px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left {
-    padding: 10px;
     min-height: 65px;
+    padding: 0px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left .timeline_title {
     color: #2d2c2c;
+    padding-top: 10px;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left .timeline_subtitle {
+    padding-top: 4px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left .timeline_img {
     width: 100%;
@@ -1378,11 +1459,15 @@ body {
     display: none;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right {
-    padding: 10px;
+    padding: 0px;
     min-height: 65px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right .timeline_title {
     color: #2d2c2c;
+    padding-top: 10px;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right .timeline_subtitle {
+    padding-top: 4px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right .timeline_img {
     width: 100%;
