--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -142,12 +142,23 @@ body {
     }
   }
 
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 500px) and (-webkit-min-device-pixel-ratio: 2){
     margin-top: 10px;
     .banner_text_1 {
+      margin-bottom: 24px;
+      font-size: 30px;
+      line-height: 36px;
+      color: #ffffff;
+      font-weight: 700;
+      text-align: center;
+      padding-left: 15px;
+      padding-right: 15px;
+      text-shadow: 0px .5px 6px rgba(0, 0, 0, 0.3);
     }
     .banner_text_2 {
       letter-spacing: 0;
+      font-size: 16px;
+
     }
   }
 }
@@ -550,7 +561,7 @@ body {
             background-repeat: no-repeat;
             cursor: pointer;
             position: relative;
-            z-index: 9999ss;
+            z-index: 10;
           }
           input[type="range"]::-moz-range-track {
             height: 8px;
@@ -820,14 +831,29 @@ body {
     padding-bottom: 10px;
 
     .calculate_1 p {
-      font-weight: 500;
+      margin-bottom: 24px;
+      font-size: 30px;
+      line-height: 36px;
+      font-weight: 700;
+      text-align: center;
+      padding-left: 15px;
+      padding-right: 15px;
       color: #2d2c2c;
+    }
+    .calculate_2 p{
+      font-size: 16px;
     }
 
     .parent {
       display: block;
       .card_parent {
         .investing_amout_slider {
+          .option_mobile {
+            display: block !important;
+          }
+          .option_default {
+            display: none !important;
+          }
           .investing_slider {
             position: relative;
             .value_slider {
@@ -899,8 +925,32 @@ body {
           }
         }
         .performance_slider {
+          .option_mobile {
+            display: block !important;
+          }
+          .option_default {
+            display: none !important;
+          }
           .investing_slider {
             position: relative;
+            .value_slider {
+              top: 4px;
+              height: 10px;
+              border-bottom-left-radius: 4px;
+              border-top-left-radius: 4px;
+              position: absolute;
+              background: #0088ff;
+              z-index: 1;
+            }
+            .investing_slider_range {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
+            }
 
             .investing_slider_range::-webkit-slider-thumb {
               -webkit-appearance: none;
@@ -952,8 +1002,32 @@ body {
           }
         }
         .investing_year_slider {
+          .option_mobile {
+            display: block !important;
+          }
+          .option_default {
+            display: none !important;
+          }
           .investing_slider {
             position: relative;
+            .value_slider {
+              top: 4px;
+              height: 10px;
+              border-bottom-left-radius: 4px;
+              border-top-left-radius: 4px;
+              position: absolute;
+              background: #0088ff;
+              z-index: 1;
+            }
+            .investing_slider_range {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
+            }
 
             .investing_slider_range::-webkit-slider-thumb {
               -webkit-appearance: none;
@@ -1011,7 +1085,6 @@ body {
           .returns_percent {
             padding-top: 6px;
             text-align: center;
-            padding-top: 6px;
             display: flex;
             justify-content: center !important;
             align-items: center;
@@ -1401,8 +1474,8 @@ body {
       padding-left: 20px;
       padding-right: 20px;
       font-family: "Montserrat";
-      padding-top: 16px;
-      font-size: 18px;
+      padding-top: 12px;
+      font-size: 16px;
       font-weight: 500;
       line-height: 24px;
       text-align: center;
@@ -1422,7 +1495,7 @@ body {
         .center_line2 {
           .center_line_img {
             right: 0px;
-            left: 44px;
+            left: 35px;
             position: absolute;
             top: 40px;
             width: 100;
@@ -1438,7 +1511,7 @@ body {
 
             .meta-date {
               margin-left: 0;
-              left: 20px;
+              left: 10px;
               top: 12%;
               height: 50px;
               width: 50px;
@@ -1449,7 +1522,8 @@ body {
               float: none;
               margin-left: 90px;
               min-height: 53px;
-              margin-bottom: 20px;
+              margin-bottom:0px;
+
             }
             .content-right-container {
               max-width: 100%;
@@ -1457,15 +1531,19 @@ body {
               float: none;
               margin-left: 90px;
               min-height: 53px;
+              margin-bottom:0px;
             }
             .content-left {
-              padding: 10px;
               min-height: 65px;
+              padding:0px;
 
               .timeline_title {
                 color: #2d2c2c;
+                padding-top: 10px;
               }
-
+              .timeline_subtitle{
+                padding-top: 4px;
+              }
               .timeline_img {
                 width: 100%;
                 max-width: 300px;
@@ -1476,11 +1554,15 @@ body {
               }
             }
             .content-right {
-              padding: 10px;
+              padding: 0px;
               min-height: 65px;
               .timeline_title {
                 color: #2d2c2c;
+                padding-top: 10px;
               }
+            .timeline_subtitle{
+              padding-top: 4px;
+            }
               .timeline_img {
                 width: 100%;
                 max-width: 300px;
